--- a/AboutMe.html
+++ b/AboutMe.html
@@ -21,22 +21,18 @@
           <h1>Eric Grändinger</h1>
           <div class = "text">
             <p>
-              My name is Eric Grändinger, and I’m currently studying to become a system developer with a focus on backend development. 
-              I’m passionate about building solutions that are not only technically sound but also secure, efficient, and maintainable. 
-              Throughout my education, I’ve worked on a wide range of projects — from database systems and Java development to web technologies and user-centered design.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
-            <p>
-              I enjoy solving problems by trying different approaches until I find the one that works best. 
-              Right now, I’m looking for opportunities where I can grow as a backend developer and deepen my skills in areas like API design, databases, and server-side logic. 
-              In my free time, I like to explore new technologies, build small projects, and constantly push myself to learn more.
-            </p>
-            <p>Detta är AI placeholder</p>
           </div>
         </section>
         <aside>
           <ul class = "aside">
             <li><a href=""><img src="image/Phone.png" alt="Phone "></a></li>
-            <li><a href="https://github.com/EricBG1"><img src="image/Github.png" alt="Github">  </a></li>
+            <li><a href="https://github.com/Eric-Grandinger"><img src="image/Github.png" alt="Github">  </a></li>
             <li><a href="https://www.linkedin.com/in/eric-gr%C3%A4ndinger-658268332/"><img src="image/Linkedin.png" alt="Linkedin"></a></li>
             <li><a href="mailto:grandinge@outlook.com"><img src="image/Mail.png" alt="Email"></a></li>
           </ul>
